--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body {
     padding: 0;
     display: flex;
     flex-direction: column;
+    font-family: Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
 
 header {
@@ -12,7 +13,7 @@ header {
     font-size: 24px;
     color: #F9FAF8;
     background-color: #1F2937;
-    padding: 10px 150px;
+    padding: 10px 200px;
 }
 
 ul {
@@ -20,7 +21,7 @@ ul {
     margin: 0;
     display: flex;
     font-size: 18px;
-    gap: 10px;
+    gap: 50px;
 }
 
 li {
@@ -30,4 +31,37 @@ li {
 a {
     text-decoration: none;
     color: #E5E7EB;
+}
+
+.top {
+    display: flex;
+    padding: 100px 200px;
+    justify-content: space-between;
+    background-color: #1F2937;
+}
+
+.hero {
+    display: flex;
+    flex-direction: column;
+}
+
+.hero h1 {
+    margin: 0;
+    font-size: 48px;
+    font-weight: 900;
+    color: #F9FAF8;
+}
+
+.hero p {
+    font-size: 18px;
+    color: #E5E7EB;
+}
+
+.hero button {
+    background-color: #3882F6;
+    color: #F9FAF8;
+    margin-right: auto;
+    margin-top: auto;
+    padding: 5px 20px;
+    border-radius: 8px;
 }
