--- a/style.css
+++ b/style.css
@@ -40,6 +40,11 @@ a {
     background-color: #1F2937;
 }
 
+.top video {
+    border-radius: 20px;
+    width: 760px;
+}
+
 .hero {
     display: flex;
     flex-direction: column;
@@ -64,4 +69,39 @@ a {
     margin-top: auto;
     padding: 5px 20px;
     border-radius: 8px;
+}
+
+.mid {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
+
+.mid h1{
+    margin: 30px 0px;
+    font-size: 36px;
+    color: #1F2937;
+    font-weight: 900;
+}
+
+.clips {
+    display: flex;
+    justify-content: space-between;
+    margin: 0px 300px;
+}
+
+.clip {
+    display: flex;
+    flex-direction: column;
+}
+
+.clip video {
+    width: 280px;
+    border-radius: 12px;
+}
+
+.clip p {
+    text-align: center;
+    font-size: 18px;
+    color: #1F2937;
 }
