--- a/style.css
+++ b/style.css
@@ -167,3 +167,11 @@ a {
     padding: 5px 25px;
     margin: auto 0;
 }
+
+footer {
+    background-color: #1F2937;
+    color: #F9FAF8;
+    padding: 30px 0;
+    text-align: center;
+    font-size: 18px;
+}
